# demir

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.zed/: debug.json
demir/ast/: Cargo.toml
demir/ast/src/: lib.rs  lowering.rs  parser.rs  precedence.rs  symbol_map.rs
demir/codegen/: Cargo.toml
demir/codegen/src/: disasm.rs  lib.rs  opcode.rs
demir/core/: Cargo.toml
demir/core/src/: lib.rs  symbol_table.rs  types.rs
demir/ir/: Cargo.toml
demir/ir/src/: ast_lowering.rs  disasm.rs  lib.rs  types.rs
demir/lexer/: Cargo.toml
demir/lexer/src/: lexer.rs  lib.rs  token.rs
demir/parser/: Cargo.toml
demir/parser/src/: error.rs  lib.rs  precedence.rs
demir/runtime/: Cargo.toml
demir/sema/: Cargo.toml
demir/sema/src/: error.rs  lib.rs  symbol_table.rs
demir/vm/: Cargo.toml
demir/vm/src/: lib.rs
demirc/: Cargo.toml
demirc/src/: main.rs
examples/: hello_world.oxl  structs.oxl
