[package]
name = "demirc"
edition = "2024"
resolver = "3"

[[bin]]
name = "demirc"
path = "src/main.rs"

[dependencies]
core = { path = "../demir/core" }
ast = { path = "../demir/ast" }
ir = { path = "../demir/ir" }
parser = { path = "../demir/parser" }
sema = { path = "../demir/sema" }
codegen = { path = "../demir/codegen" }
vm = { path = "../demir/vm" }
